<resources>
    <string name="app_name">MYJ Demos</string>
    <string name="myj_logo">MYJ Logo</string>
    <string name="myj_world">MYJ World</string>
    <string name="information_for_user">Information For User</string>
    <string name="policy">Before using the app, we would like to inform the user that all the content in the app is for DEMO purposes only. We do not claim to be the owner of any of the ideas in the app or content (Images or text) within the app.</string>
    <string name="agree"><![CDATA[Agree & Continue]]></string>
    <string name="choose_an_app">Choose an app:</string>
    <string name="dd_app_logo">Dinner Decider App Logo</string>
    <string name="dd_decide">Decide!</string>
    <string name="dd_add_food">Add food</string>
    <string name="dd_add_new_food">Add new food...</string>
    <string name="devslopes_banner">Devslopes Banner</string>
    <string name="devslopes_logo">Devslopes Logo</string>
    <string name="devslopes_text">Devslopes</string>
    <string name="devslopes_inbox_button">Inbox Button</string>
    <string name="devslopes_camera_button">Camera Button</string>
    <string name="devslopes_favourite_button">Favourite Button</string>
    <string name="devslopes_images_img">Images Image</string>
    <string name="devslopes_vid_img">Video Image</string>
    <string name="devslopes_code_img">Code Image</string>
    <string name="devslopes_customize_dashboard">Customize Dashboard</string>
    <string name="products">Products:</string>
    <string name="buy_product_web_text">Buy products at https://coderswag.com/</string>
    <string name="category_background">Category Background</string>
    <string name="category_name">Category Name</string>
    <string name="item_image">Item Image</string>
    <string name="item_name">Item Name</string>
    <string name="item_price">Item Price</string>
    <string name="categories">Categories:</string>
</resources>