<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dinnerDeciderAccent"
    tools:context=".controller.dinnerdecider.DinnerDeciderMainActivity">

    <ImageView
        android:id="@+id/dinnerDeciderLogoImg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dd_logo"
        android:contentDescription="@string/dd_app_logo" />

    <TextView
        android:id="@+id/dinnerDeciderFoodTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/muli_bold"
        android:text="Chinese"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dinnerDeciderLogoImg" />

    <EditText
        android:id="@+id/dinnerDeciderAddFoodEditTxt"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="@font/muli_bold"
        android:hint="@string/dd_add_new_food"
        android:inputType="textPersonName"
        android:textColorHint="#455A64"
        app:layout_constraintBottom_toTopOf="@+id/dinnerDeciderAddFoodBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/dinnerDeciderAddFoodBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="80dp"
        android:text="@string/dd_add_food"
        android:textColor="@color/white"
        app:backgroundTint="@color/dinnerDeciderPrimary"
        app:layout_constraintBottom_toTopOf="@+id/dinnerDeciderDecideBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/dinnerDeciderDecideBtn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/dd_decide"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/dinnerDeciderPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>